--- a/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
+++ b/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relleno\frmFloodFill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relleno\frmFloodFill.Designer.cs">
+      <DependentUpon>frmFloodFill.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmInicio.resx">
       <DependentUpon>frmInicio.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,6 +126,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Relleno\frmFloodFill.resx">
+      <DependentUpon>frmFloodFill.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
