--- a/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
+++ b/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relleno\frmBoundaryFill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relleno\frmBoundaryFill.Designer.cs">
+      <DependentUpon>frmBoundaryFill.cs</DependentUpon>
+    </Compile>
     <Compile Include="Relleno\frmFloodFill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +132,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Relleno\frmBoundaryFill.resx">
+      <DependentUpon>frmBoundaryFill.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Relleno\frmFloodFill.resx">
       <DependentUpon>frmFloodFill.cs</DependentUpon>
     </EmbeddedResource>
