--- a/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
+++ b/DiscretizacionCirculosApp/AlgoritmosClasicosApp.csproj
@@ -90,6 +90,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recorte lineas\frmCohenSutherland.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recorte lineas\frmCohenSutherland.Designer.cs">
+      <DependentUpon>frmCohenSutherland.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Recorte lineas\frmLiangBarsky.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recorte lineas\frmLiangBarsky.Designer.cs">
+      <DependentUpon>frmLiangBarsky.cs</DependentUpon>
+    </Compile>
     <Compile Include="Relleno\frmBoundaryFill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +150,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Recorte lineas\frmCohenSutherland.resx">
+      <DependentUpon>frmCohenSutherland.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Relleno\frmBoundaryFill.resx">
       <DependentUpon>frmBoundaryFill.cs</DependentUpon>
     </EmbeddedResource>
